# newstore_connector

./: .gitignore  .pylintrc  Pipfile  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: api-request.md
docs/: contributing.md  newstore_connector.md  order_injection_0_1.md  order_notes_0_1_0.md
newstore_connector/: __init__.py  ns_api_base_class.py  ns_connector.py  request_lists.py
newstore_connector/order_injection/: __init__.py  order_injection_0_1.py
newstore_connector/order_notes/: __init__.py  order_notes_0_1_0.py
tests/test_order_injection/: test_order_injection_0_1.py
tests/test_order_injection/fixtures/: invalid_order_payload.json  valid_order_payload.json
