[metadata]
name = newstore-connector
version = 0.1.0
author = Kyle Ranous
author_email = kyle.ranous@changecx.com
url = https://github.com/kyleranous/newstore_connector
description = A package for interacting with the NewStore api_toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = newstore
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.9
install_reqires =
    api_toolkit
    requests